[package]
name = "m2_interface"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.17.6"

[dependencies.borsh]
version = "^0.10"

[dependencies.num-derive]
version = "^0.3"

[dependencies.num-traits]
version = "^0.2"

[dependencies.serde]
optional = true
version = "^1.0"

[dependencies.thiserror]
version = "^1.0"
